fixed layout of table elements on small screens

--- a/themes/asperity/assets/scss/_base.scss
+++ b/themes/asperity/assets/scss/_base.scss
@@ -25,9 +25,6 @@ body {
 
 	& > * {
 		image-rendering: initial;
-/*		image-rendering: smooth;
-		image-rendering: high-quality;
-		image-rendering: optimizequality;*/
 	}
 }
 
